fix(flow): make inline-image vertically aligned

--- a/styles/flow/mod.css
+++ b/styles/flow/mod.css
@@ -3,6 +3,10 @@ p, pre {
   margin: 0 auto 1rem;
 }
 
+p img {
+  vertical-align: middle;
+}
+
 :is(p, pre):last-child {
   margin-bottom: 0;
 }
